--- a/src/main/resources/pages/back/tags.html
+++ b/src/main/resources/pages/back/tags.html
@@ -33,7 +33,7 @@
                     <i class="dropdown icon"></i>
                     <div class="menu element-ui dialog" style="z-index: 999 !important;">
                         <a href="/back/user.html" class="item">个人信息</a>
-                        <a href="/logout" class="item">注销</a>
+                        <a onclick="logout()" class="item">注销</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             <div class="three wide column">
                 <div class="ui inverted link list">
                     <div class="item">
-                        <img src="../../images/weixin.png"
+                        <img src="/images/weixin.png"
                              class="ui rounded image" alt="" width="110px">
                     </div>
                 </div>
