--- a/src/main/resources/pages/back/user-input.html
+++ b/src/main/resources/pages/back/user-input.html
@@ -32,7 +32,7 @@
                     <i class="dropdown icon"></i>
                     <div class="menu element-ui dialog" style="z-index: 999 !important;">
                         <a href="/back/user.html" class="item">个人信息</a>
-                        <a href="logout"  class="item">注销</a>
+                        <a onclick="logout()"   class="item">注销</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,14 @@
                 </div>
             </div>
             <div class="three wide column">
-                <h4 class="ui inverted header">最新博客</h4>
+                <div class="three wide column">
+                    <h4 class="ui inverted header">推荐博客</h4>
+                    <div id="recommends" class="ui inverted link list m-text-thin m-text-spaced">
+                        <a href="#" class="item">用户故事</a>
+                        <a href="#" class="item">用户故事</a>
+                        <a href="#" class="item">用户故事</a>
+                    </div>
+                </div>
             </div>
             <div class="three wide column">
                 <h4 class="ui inverted header">联系我</h4>
