--- a/src/main/resources/pages/back/user.html
+++ b/src/main/resources/pages/back/user.html
@@ -32,7 +32,7 @@
                     <i class="dropdown icon"></i>
                     <div class="menu element-ui dialog" style="z-index: 999 !important;">
                         <a href="/back/user.html" class="item">个人信息</a>
-                        <a href="logout"  class="item">注销</a>
+                        <a onclick="logout()"  class="item">注销</a>
                     </div>
                 </div>
             </div>
