--- a/src/main/resources/pages/p/index.html
+++ b/src/main/resources/pages/p/index.html
@@ -112,47 +112,6 @@
 
                         </div>
                     </div>
-                    <div class="ui padded segment m-padded-tb-2em m-mobile-clear m-card">
-                        <div class="ui middle aligned mobile reversed stackable grid">
-                            <div class="eleven wide column">
-                                <h3 class="ui header"><a href="/blog/53" target="_blank" class="m-black">ZooKeeper</a>
-                                </h3>
-                                <!--<p class="m-text" th:text="|${blog.description}......|">1正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>-->
-                                <p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">Zookeeper
-                                    分布式服务框架是Apache Hadoop
-                                    的一个子项目，它主要是用来解决分布式应用中经常遇到的一些数据管理问题，如：分布式注册中心，分布式锁，统一命名服务、状态同步服务、集群管理、分布式应用配置项的管理等等......</a>
-                                </p>
-                                <div class="ui grid">
-                                    <div class="eleven wide column">
-                                        <div class="ui mini horizontal link list">
-                                            <div class="item">
-                                                <img src="http://cdn.xiongsihao.com/avatar.png" alt=""
-                                                     class="ui avatar image">
-                                                <div class="content"><a href="#" class="header">管理员</a></div>
-                                            </div>
-                                            <div class="item">
-                                                <i class="calendar icon"></i><span>2021-02-12</span>
-                                            </div>
-                                            <div class="item">
-                                                <i class="eye icon"></i> <span>4245</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="right aligned four wide column">
-                                        <a href="#" target="_blank"
-                                           class="ui teal basic label m-padded-tiny m-text-thin">java框架</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="four wide column">
-                                <a href="/blog/53" target="_blank">
-                                    <img src="http://cdn.xiongsihao.com/blogFirstPicture53.jpg" alt=""
-                                         class="ui rounded image">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
                 </div>
 
                 <!--footer-->
@@ -169,7 +128,7 @@
 
             </div>
             <!--    右部分top-->
-            <div class="four wide column">
+            <div class="four wide column  m-back-grass-deep m-margin-top" >
                 <div class="four wide column m-card">
                     <div class="ui top attached segment">
                         <div class="ui attached segment center aligned">
@@ -245,14 +204,13 @@
                         <i class="bookmark icon"></i>最新推荐
                     </div>
                     <div class="ui segment">
-                        <a href="/blog/53" data-pjax="" class="m-black m-text-thin">ZooKeeper</a>
+                        <a href="/blog/53"  class="m-black m-text-thin">ZooKeeper</a>
                     </div>
                 </div>
-
                 <!--二维码-->
-                <h4 class="ui horizontal divider header m-margin-top-large">扫码加好友</h4>
-                <div class="ui centered card" style="width: 11em">
-                    <img src="/images/weixin.png" alt="" class="ui rounded image">
+                <h4 class="ui horizontal divider header m-margin-top-large">吱吱吱~欢迎参观</h4>
+                <div class="ui centered card" style="width: 12em">
+                    <img src="/images/可爱.gif" alt="" class="ui rounded image">
                 </div>
             </div>
         </div>
@@ -274,8 +232,8 @@
                 </div>
             </div>
             <div class="three wide column">
-                <h4 class="ui inverted header">最新博客</h4>
-                <div class="ui inverted link list m-text-thin m-text-spaced">
+                <h4 class="ui inverted header">推荐博客</h4>
+                <div id="recommends" class="ui inverted link list m-text-thin m-text-spaced">
                     <a href="#" class="item">用户故事</a>
                     <a href="#" class="item">用户故事</a>
                     <a href="#" class="item">用户故事</a>
@@ -346,8 +304,25 @@
         getTypes();
         getTags();
         getBlogs(1);
+        getRecommendList();
     }
-
+    //redis用户值并复制
+    function getRecommendList() {
+        $.get("/recommendBlogs", null, function (data, textStatus) {
+            if (data.code == 200) {
+                let recommendHtml = '<div class="ui secondary segment "><i class="bookmark icon"></i>最新推荐</div>';
+                $.each(data.data, function (index, val) {
+                    recommendHtml +=
+                        '<div class="ui segment"><a href="/p/blog.html?article='
+                        + val.id
+                        + '" class="m-black m-text-thin">'
+                        + val.title
+                        + '</a></div>';
+                });
+                $("#recommendDiv").html(recommendHtml);
+            }
+        });
+    }
     function setTypes(obj) {
         let typeList = '';
         $.each(obj, function (index, val) {
@@ -397,7 +372,7 @@
         var pages = obj.pages;
         var page_content = '';//当前页内容
         $.each(blogs, function (index, val) {
-            let blogUrl =  "/p/blog.html?Bid="+val.id;
+            let blogUrl =  "/p/blog.html?article="+val.id;
             page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'
                 +blogUrl
                 +'" target="_blank" class="m-black">'
