评论删除+项目启动初始化达到发布级别

--- a/src/main/resources/pages/back/blog-input.html
+++ b/src/main/resources/pages/back/blog-input.html
@@ -333,8 +333,14 @@
             $("#content").val(obj.content);
             $('[name="title"]').val(obj.title);
 
-            $('[name="type.id"]').val(obj.type.id);
-            $('.type.text').text(obj.type.name);
+
+            if(obj.type == null){
+                $('[name="type.id"]').val("");
+                $('.type.text').text("");
+            }else {
+                $('[name="type.id"]').val(obj.type.id);
+                $('.type.text').text(obj.type.name);
+            }
             $('.type.text').toggleClass("default");
 
             $('[name="tagIds"]').val(obj.tagIds);
