--- a/src/main/resources/pages/p/blog.html
+++ b/src/main/resources/pages/p/blog.html
@@ -163,7 +163,7 @@
                 <input type="hidden" name="blog.id">
                 <input type="hidden" name="parentComment.id" value="">
                 <input type="hidden" name="parentComment.email" value="">
-                <input type="hidden" name="login" value="">
+                <input type="hidden" name="login" value="false">
                 <div class="field">
                     <textarea name="content"
                               placeholder="评论千万条，友善第一条"></textarea>
