--- a/src/main/resources/pages/p/types.html
+++ b/src/main/resources/pages/p/types.html
@@ -231,7 +231,7 @@
         let current = obj.current;
         //总页数
         var pages = obj.pages;
-        var page_content;//当前页内容
+        var page_content = "";//当前页内容
         $.each(blogs, function (index, val) {
             let blogUrl =  "/p/blog.html?article="+val.id;
             page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
