--- a/src/main/resources/pages/p/guestbook.html
+++ b/src/main/resources/pages/p/guestbook.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head lang="en" th:replace="_fragments::head(~{::title})">
+<html lang="zh-CN">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>留言板</title>
