--- a/src/main/resources/pages/p/types.html
+++ b/src/main/resources/pages/p/types.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head lang="en">
+<html lang="zh-CN">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>分类</title>
