--- a/src/main/resources/pages/p/blog.html
+++ b/src/main/resources/pages/p/blog.html
@@ -352,7 +352,6 @@
 <!-- jquery -->
 <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
 <!-- semantic-ui-->
-
 <script type="text/javascript" src="/lib/semantic/semantic.min.js"></script>
 <!--editormd-->
 
@@ -367,8 +366,7 @@
 <script type="text/javascript" src="/lib/layer/layer.js"></script>
 <script type="text/javascript" src="/lib/editormd/editormd.min.js"></script>
 
-<script type="text/javascript" type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
+<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>-->
 
 <script type="text/javascript" src="/lib/prism/prism.js"></script>
 <script type="text/javascript" src="/js/common.js"></script>
