--- a/src/main/resources/pages/p/guestbook.html
+++ b/src/main/resources/pages/p/guestbook.html
@@ -247,7 +247,6 @@
 <!-- semantic-ui-->
 <script type="text/javascript" src="/lib/semantic/semantic.min.js"></script>
 <!--editormd-->
-
 <script src="/lib/editormd/lib/prettify.min.js"></script>
 <script src="/lib/editormd/lib/raphael.min.js"></script>
 <script src="/lib/editormd/lib/underscore.min.js"></script>
@@ -259,7 +258,7 @@
 <script type="text/javascript" src="/lib/layer/layer.js"></script>
 <script type="text/javascript" src="/lib/editormd/editormd.min.js"></script>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
+<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>-->
 
 <script type="text/javascript" src="/lib/prism/prism.js"></script>
 <script type="text/javascript" src="/js/common.js"></script>
